--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "alfa6661/laravel-autonumber": "^1.2",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "klaravel/ntrust": "^1.1",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "phpoffice/phpexcel": "^1.8",
+        "phpoffice/phpspreadsheet": "^1.17",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
